Maj SubMenu filtrage Rareté

--- a/index.html
+++ b/index.html
@@ -57,138 +57,176 @@
     <img src="Icons/Jeracraft_Banner.png" draggable="false" style="width: 100%; height: auto; z-index: 1;">
 
         <div class="LogoMenu-content">
+            <div class="SubMenu">
+                <a class="SubMenuRarete"><img id= AdventureChestCommonImg src='Icons/Adventure_Chest_Common.png' draggable="false" style="position: absolute; left: 70%;  width: 40px; height: auto; z-index: 1">Treasures Sites</a>
+                    <div class="SubMenu-content">
 
-
-<!------Treasure Sites Toggle------>
+<!-----Treasure Sites Uncommon Toggle----->
 
 <a href="#" onclick = "
 
-        Toggle('Treasure1');
-        Toggle('Treasure2');
-        Toggle('Treasure3');
-        Toggle('Treasure4');
-        Toggle('Treasure5');
-        Toggle('Treasure6');
-        Toggle('Treasure7');
-        Toggle('Treasure8');
-        Toggle('Treasure9');
         Toggle('Treasure10');
-        Toggle('Treasure11');
-        Toggle('Treasure12');
-        Toggle('Treasure13');
-        Toggle('Treasure14');
-        Toggle('Treasure15');
-        Toggle('Treasure16');
-        Toggle('Treasure17');
-        Toggle('Treasure18');
         Toggle('Treasure19');
-        Toggle('Treasure20');
         Toggle('Treasure21');
-        Toggle('Treasure22');
-        Toggle('Treasure23');
-        Toggle('Treasure24');
-        Toggle('Treasure25');
-        Toggle('Treasure26');
         Toggle('Treasure27');
-        Toggle('Treasure28');
-        Toggle('Treasure29');
-        Toggle('Treasure30');
         Toggle('Treasure31');
-        Toggle('Treasure32');
-        Toggle('Treasure33');
-        Toggle('Treasure34');
-        Toggle('Treasure35');
         Toggle('Treasure36');
-        Toggle('Treasure37');
-        Toggle('Treasure38');
-        Toggle('Treasure39');
-        Toggle('Treasure40');
-        Toggle('Treasure41');
-        Toggle('Treasure42');
-        Toggle('Treasure43');
-        Toggle('Treasure44');
         Toggle('Treasure45');
-        Toggle('Treasure46');
-        Toggle('Treasure47');
-        Toggle('Treasure48');
-        Toggle('Treasure49');
-        Toggle('Treasure50');
-        Toggle('Treasure51');
-        Toggle('Treasure52');
         Toggle('Treasure53');
         Toggle('Treasure54');
         Toggle('Treasure55');
-        Toggle('Treasure56');
-        Toggle('Treasure57');
         Toggle('Treasure58');
-        Toggle('Treasure59');
-        Toggle('Treasure60');
         Toggle('Treasure61');
-        Toggle('Treasure62');
-        Toggle('Treasure63');
-        Toggle('Treasure64');
         Toggle('Treasure65');
-        Toggle('Treasure66');
-        Toggle('Treasure67');
-        Toggle('Treasure68');
-        Toggle('Treasure69');
         Toggle('Treasure70');
         Toggle('Treasure71');
-        Toggle('Treasure72');
-        Toggle('Treasure73');
-        Toggle('Treasure74');
         Toggle('Treasure75');
-        Toggle('Treasure76');
         Toggle('Treasure77');
         Toggle('Treasure78');
         Toggle('Treasure79');
-        Toggle('Treasure80');
         Toggle('Treasure81');
         Toggle('Treasure82');
         Toggle('Treasure83');
         Toggle('Treasure84');
         Toggle('Treasure85');
-        Toggle('Treasure86');
         Toggle('Treasure87');
-        Toggle('Treasure88');
-        Toggle('Treasure89');
-        Toggle('Treasure90');
-        Toggle('Treasure91');
         Toggle('Treasure92');
-        Toggle('Treasure93');
-        Toggle('Treasure94');
         Toggle('Treasure95');
-        Toggle('Treasure96');
         Toggle('Treasure97');
-        Toggle('Treasure98');
-        Toggle('Treasure99');
-        Toggle('Treasure100');
-        Toggle('Treasure101');
         Toggle('Treasure102');
         Toggle('Treasure103');
-        Toggle('Treasure104');
-        Toggle('Treasure105');
-        Toggle('Treasure106');
-        Toggle('Treasure107');
         Toggle('Treasure108');
-        Toggle('Treasure109');
-        Toggle('Treasure110');
-        Toggle('Treasure111');
-        Toggle('Treasure112');
-        Toggle('Treasure113');
         Toggle('Treasure114');
-        Toggle('Treasure115');
-        Toggle('Treasure116');
-        Toggle('Treasure117');
-        Toggle('Treasure118');
         Toggle('Treasure119');
+
+        return false;
+
+">
+
+<img id= AdventureChestUnCommonImg src='Icons/Adventure_Chest_Uncommon.png' draggable="false" style="position: absolute; left: 70%;  width: 40px; height: auto; z-index: 1">Common Sites</a>
+
+<!---------Treasure Sites Rare Toggle-------->
+
+<a href="#" onclick = "
+
+        Toggle('Treasure11');
+        Toggle('Treasure12');
+        Toggle('Treasure24');
+        Toggle('Treasure26');
+        Toggle('Treasure35');
+        Toggle('Treasure39');
+        Toggle('Treasure40');
+        Toggle('Treasure41');
+        Toggle('Treasure42');
+        Toggle('Treasure43');
+        Toggle('Treasure49');
+        Toggle('Treasure51');
+        Toggle('Treasure56');
+        Toggle('Treasure57');
+        Toggle('Treasure62');
+        Toggle('Treasure63');
+        Toggle('Treasure64');
+        Toggle('Treasure67');
+        Toggle('Treasure68');
+        Toggle('Treasure69');
+        Toggle('Treasure72');
+        Toggle('Treasure86');
+        Toggle('Treasure88');
+        Toggle('Treasure91');
+        Toggle('Treasure96');
+        Toggle('Treasure99');
+        Toggle('Treasure101');
+        Toggle('Treasure107');
+        Toggle('Treasure110');
+        Toggle('Treasure112');
         Toggle('Treasure120');
 
         return false;
 
 ">
 
-<img id= AdventureChestCommonImg src='Icons/Adventure_Chest_Common.png' draggable="false" style="position: absolute; left: 70%;  width: 40px; height: auto; z-index: 1">Treasures Sites</a>
+<img id= AdventureChestRareImg src='Icons/Adventure_Chest_Rare.png' draggable="false" style="position: absolute; left: 70%;  width: 40px; height: auto; z-index: 1">Rare Sites</a>
+
+<!---------Treasure Sites Epic Toggle-------->
+
+<a href="#" onclick = "
+
+        Toggle('Treasure1');
+        Toggle('Treasure3');
+        Toggle('Treasure4');
+        Toggle('Treasure6');
+        Toggle('Treasure8');
+        Toggle('Treasure9');
+        Toggle('Treasure14');
+        Toggle('Treasure16');
+        Toggle('Treasure17');
+        Toggle('Treasure18');
+        Toggle('Treasure22');
+        Toggle('Treasure23');
+        Toggle('Treasure25');
+        Toggle('Treasure30');
+        Toggle('Treasure38');
+        Toggle('Treasure47');
+        Toggle('Treasure50');
+        Toggle('Treasure52');
+        Toggle('Treasure59');
+        Toggle('Treasure60');
+        Toggle('Treasure73');
+        Toggle('Treasure74');
+        Toggle('Treasure76');
+        Toggle('Treasure90');
+        Toggle('Treasure93');
+        Toggle('Treasure94');
+        Toggle('Treasure104');
+        Toggle('Treasure109');
+        Toggle('Treasure111');
+        Toggle('Treasure118');
+
+        return false;
+
+">
+
+<img id= AdventureChestEpicImg src='Icons/Adventure_Chest_Epic.png' draggable="false" style="position: absolute; left: 70%;  width: 40px; height: auto; z-index: 1">Epic Sites</a>
+
+<!------Treasure Sites Legendary Toggle------>
+
+<a href="#" onclick = "
+
+        Toggle('Treasure2');
+        Toggle('Treasure5');
+        Toggle('Treasure7');
+        Toggle('Treasure13');
+        Toggle('Treasure15');
+        Toggle('Treasure20');
+        Toggle('Treasure28');
+        Toggle('Treasure29');
+        Toggle('Treasure32');
+        Toggle('Treasure33');
+        Toggle('Treasure34');
+        Toggle('Treasure37');
+        Toggle('Treasure44');
+        Toggle('Treasure46');
+        Toggle('Treasure66');
+        Toggle('Treasure80');
+        Toggle('Treasure89');
+        Toggle('Treasure98');
+        Toggle('Treasure100');
+        Toggle('Treasure105');
+        Toggle('Treasure106');
+        Toggle('Treasure113');
+        Toggle('Treasure115');
+        Toggle('Treasure116');
+        Toggle('Treasure117');
+
+        return false;
+
+">
+
+<img id= AdventureChestLegendaryImg src='Icons/Adventure_Chest_Legendary.png' draggable="false" style="position: absolute; left: 70%;  width: 40px; height: auto; z-index: 1">Legendary Sites</a>
+
+
+                    </div>
+            </div>
 
 
 <!------Quests Toggle------>
@@ -336,13 +374,15 @@
 
 <img id= MineshaftImg src='Icons/Minecart.png' draggable="false" style="position: absolute; left: 64%; width: 60px; height: auto; z-index: 1">Mineshafts</a>   
 
-
+                    
         </div>
 
     </div>
 </div>
 
-<!--------------------Toolbox Style rounded bottom left corner----------------------->
+
+<!--------------------SideMenu Style----------------------->
+
 
 <style>
 
@@ -351,11 +391,10 @@
     padding: 15px;
     border: none;
     cursor: pointer;
-
 }
 
 .LogoMenu {
-    position: fixed;   
+    position: fixed;
     display: inline-block;
     z-index: 1;
     width: 200px;
@@ -363,12 +402,58 @@
 }
 
 .LogoMenu-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  left: 0px;
-  width: 200px ;
-  height: auto;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    left: 0px;
+    width: 200px ;
+    height: auto;
+}
+
+.SubMenu .SubMenuRarete { 
+    text-decoration: none;
+    font-family: 'Trebuchet MS';
+    font-style: oblique;
+    text-indent: 5%;
+    color:orange;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 200px;
+    line-height: 65px;
+}
+
+.SubMenu-content {
+    display: none;
+    position: absolute;
+    left: 200px;
+    top: 0px;
+    background-color: #a1a0a0;
+    width: 100%;
+    z-index: 1;
+}
+
+.SubMenu-content a {
+
+    text-decoration: none;
+    font-family: 'Trebuchet MS';
+    font-style: oblique;
+    text-indent: 5%;
+    color:orange;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 200px;
+    line-height: 65px;
+}
+
+.SubMenu-content a:hover {
+    background-color: #eee;
+    color: black;
+}
+
+.SubMenu:hover .SubMenu-content {
+    display: block;
 }
 
 .LogoMenu-content a {
@@ -386,8 +471,8 @@
 
 .LogoMenu-content a:hover {
 
-  background-color: #d4d3d3;
-  color: white;
+    background-color: #d4d3d3;
+    color: white;
 
 }
 
