--- a/index.html
+++ b/index.html
@@ -3166,7 +3166,7 @@
 </head>
 
 
-<body style="margin:0; padding:0;">
+<body style="margin:0; padding:0; min-width: 100%;">
 
 
 <!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
